--- a/pagestyle.css
+++ b/pagestyle.css
@@ -1,12 +1,62 @@
+html,body{
+    width:100%;
+    height:100%;
+    margin:0px auto;
+    padding:0px;
+    float:left;
+	background:#d3d3d3;
+}
 #title{
-	border:3px solid black;
-	text-align:center;
+	text-align:left;
+	padding-left:10%;
+	font-size:200%;
+	color:white;
+}
+.numbotron{
+	padding-top:2%;
+	padding-bottom:2%;
+	background:#000080;
 }
 #msgs{
-	border:3px solid black;
-	margin-left:10%;
-	margin-top:10%;
-	width:60%;
-	height:50%;
+	width:100%;
+	height:78%;
 	word-wrap:break-word;	
+}
+.botelem{
+	font-size:125%;
+	margin-top:1%;
+	margin-left:5%;
+	margin-right:50%;
+	padding:1%;
+	border-radius:25px;
+	background:#ffa500;
+	color:white;
+
+}
+.userelem{
+    font-size:125%;
+	margin-top:1%;
+	margin-left:50%;
+	margin-right:5%;
+	padding:1%;
+	border-radius:25px;
+	background:white;
+	color:black;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background: #d3d3d3;
+}
+
+::-webkit-scrollbar-thumb {
+    background: grey;
+}
+.bone-control{
+	margin-left:0%;
+	width:90%;
+	font-size:200%;
 }
